--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,5 +1,40 @@
 
+#ty-popup {
 
-/***
- * HELLO
- */
+  position: absolute;
+  z-index: 301;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 20em;
+  min-height: 16em;
+
+  border: 0.125em solid #333;
+  box-sizing: border-box;
+  box-shadow: 0 0 0.6em #222;
+
+  .ty-popup-close-btn {
+    position: relative;
+    top: -2em;
+    right: 0;
+    width: 2em;
+    height: 2em;
+
+  }
+}
+
+#ty-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  z-index: 300;
+  display: none;
+  opacity: 0.8;
+  background: #333;
+
+}
+
